# ASD

./: .gitignore  CMakeLists.txt  README.md  baz.cpp  generatorka.cpp  hak.cpp  inw.cpp  kap.cpp  mal.cpp  mar.cpp  mec.cpp  par.cpp  prj.cpp  sor.cpp
Playground/: jed.cpp  roz.cpp
egzamin/: egzp.cpp
