cmake_minimum_required(VERSION 3.12)
project(ASD)

set(CMAKE_CXX_STANDARD 17)

add_executable(BAZ baz.cpp)
add_executable(SOR sor.cpp)
add_executable(MEC mec.cpp)
add_executable(MAR mar.cpp)
add_executable(MAL mal.cpp)
add_executable(PAR par.cpp)
add_executable(PRJ prj.cpp)
add_executable(HAK hak.cpp)
add_executable(KAP kap.cpp)
add_executable(INW inw.cpp inw.cpp)
add_executable(JED ./Playground/jed.cpp)
add_executable(ROZ ./Playground/roz.cpp)
add_executable(EXAM_P ./egzamin/egzp.cpp)
add_executable(EXAM_T ./egzamin/egzt.cpp)
add_executable(GENERATORKA generatorka.cpp)